// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders calculator page 1`] = `
Array [
  <Header />,
  <Calculator />,
]
`;

exports[`<App /> renders favorites page 1`] = `
Array [
  <Header />,
  <Favorites />,
]
`;

exports[`<App /> renders flavor stash page 1`] = `
Array [
  <Header />,
  <FlavorStash />,
]
`;

exports[`<App /> renders flavors page 1`] = `
Array [
  <Header />,
  <Flavors />,
]
`;

exports[`<App /> renders home by default 1`] = `
Array [
  <Header />,
  <Home />,
]
`;

exports[`<App /> renders login page 1`] = `
Array [
  <Header />,
  <Login />,
]
`;

exports[`<App /> renders profile page 1`] = `
Array [
  <Header />,
  <Profile />,
]
`;

exports[`<App /> renders recipe page 1`] = `
Array [
  <Header />,
  <Recipe />,
]
`;

exports[`<App /> renders register page 1`] = `
Array [
  <Header />,
  <Register />,
]
`;

exports[`<App /> renders shopping list page 1`] = `
Array [
  <Header />,
  <ShoppingList />,
]
`;

exports[`<App /> renders user recipes page 1`] = `
Array [
  <Header />,
  <Recipes />,
]
`;

exports[`<App /> renders user settings page 1`] = `
Array [
  <Header />,
  <Settings />,
]
`;
